--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=">
    <title>Analog clock</title>
+  <link href="/clock.css" rel="stylesheet" type="text/css">
  </head>
  <body>
    <section>
@@ -48,5 +49,6 @@
         <div class="min"></div>
 </div>
     </section>
+  <script src="/clock.js"></script>
  </body>
  </html>
