--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=">
    <title>Analog clock</title>
-  <link href="/clock.css" rel="stylesheet" type="text/css">
+  <link href="./clock.css" rel="stylesheet" type="text/css">
  </head>
  <body>
    <section>
