--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
         <div class="min"></div>
 </div>
     </section>
-  <script src="/clock.js"></script>
+  <script src="./clock.js"></script>
  </body>
  </html>
